--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
     "@angular/platform-browser": "^10.1.0",
     "@angular/platform-browser-dynamic": "^10.1.0",
     "@angular/router": "^10.1.0",
+    "@ngneat/tailwind": "^1.0.7",
     "@nrwl/angular": "10.3.1",
     "rxjs": "~6.5.5",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "10.0.1",
     "@angular-devkit/build-angular": "~0.1001.3",
     "@angular/cli": "~10.1.3",
     "@angular/compiler-cli": "^10.1.0",
@@ -72,12 +74,17 @@
     "http-server": "^0.12.3",
     "jest": "26.2.2",
     "jest-preset-angular": "8.3.1",
+    "postcss": "8.1.4",
+    "postcss-import": "13.0.0",
+    "postcss-loader": "4.0.4",
+    "postcss-scss": "3.0.2",
     "prettier": "2.0.4",
     "reg-keygen-git-hash-plugin": "^0.10.7",
     "reg-notify-github-plugin": "^0.10.7",
     "reg-publish-gcs-plugin": "^0.10.7",
     "reg-suit": "^0.10.7",
     "storycap": "^3.0.1",
+    "tailwindcss": "1.9.6",
     "ts-jest": "26.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
