setup: Set default component option

--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,12 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "scss"
+          "style": "scss",
+          "changeDetection": "OnPush",
+          "inlineTemplate": true,
+          "inlineStyle": true,
+          "displayBlock": true,
+          "skipTests": true
         }
       },
       "root": "apps/web",
