--- a/package.json
+++ b/package.json
@@ -42,6 +42,11 @@
     "@angular/platform-browser-dynamic": "^10.1.0",
     "@angular/router": "^10.1.0",
     "@ngneat/tailwind": "^1.0.7",
+    "@ngrx/component": "^10.0.1",
+    "@ngrx/component-store": "^10.0.1",
+    "@ngrx/effects": "^10.0.1",
+    "@ngrx/store": "^10.0.1",
+    "@ngrx/store-devtools": "^10.0.1",
     "@nrwl/angular": "10.3.1",
     "rxjs": "~6.5.5",
     "zone.js": "^0.10.2"
