--- a/package.json
+++ b/package.json
@@ -63,7 +63,9 @@
     "@nrwl/jest": "10.3.1",
     "@nrwl/storybook": "^10.3.1",
     "@nrwl/workspace": "10.3.1",
+    "@storybook/addon-actions": "^6.0.27",
     "@storybook/addon-knobs": "^6.0.21",
+    "@storybook/addon-storysource": "^6.0.27",
     "@storybook/angular": "^6.0.21",
     "@types/jest": "26.0.8",
     "@types/node": "~8.9.4",
