--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "nx": "nx",
     "start": "ng serve",
-    "build": "ng build",
+    "start:prod": "yarn build && yarn serve -s dist/apps/web",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
@@ -41,6 +42,7 @@
     "@angular/platform-browser": "^10.1.0",
     "@angular/platform-browser-dynamic": "^10.1.0",
     "@angular/router": "^10.1.0",
+    "@angular/service-worker": "^10.1.0",
     "@ngneat/tailwind": "^1.0.7",
     "@ngrx/component": "^10.0.1",
     "@ngrx/component-store": "^10.0.1",
@@ -78,7 +80,6 @@
     "eslint": "7.10.0",
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "http-server": "^0.12.3",
     "jest": "26.2.2",
     "jest-preset-angular": "8.3.1",
     "postcss": "8.1.4",
@@ -90,6 +91,7 @@
     "reg-notify-github-plugin": "^0.10.7",
     "reg-publish-gcs-plugin": "^0.10.7",
     "reg-suit": "^0.10.7",
+    "serve": "^11.3.2",
     "storycap": "^3.0.1",
     "tailwindcss": "1.9.6",
     "ts-jest": "26.4.0",
