--- a/nx.json
+++ b/nx.json
@@ -35,6 +35,9 @@
     "web-e2e": {
       "tags": [],
       "implicitDependencies": ["web"]
+    },
+    "domain": {
+      "tags": []
     }
   }
 }
