--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@ngrx/component": "^10.0.1",
     "@ngrx/component-store": "^10.0.1",
     "@ngrx/effects": "^10.0.1",
+    "@ngrx/entity": "^10.0.0",
+    "@ngrx/router-store": "^10.0.0",
     "@ngrx/store": "^10.0.1",
     "@ngrx/store-devtools": "^10.0.1",
     "@nrwl/angular": "10.3.1",
@@ -59,6 +61,8 @@
     "@angular/cli": "~10.1.3",
     "@angular/compiler-cli": "^10.1.0",
     "@angular/language-service": "^10.1.0",
+    "@ngrx/schematics": "^10.0.0",
+    "@ngrx/store-devtools": "^10.0.0",
     "@nrwl/cli": "10.3.1",
     "@nrwl/cypress": "10.3.1",
     "@nrwl/eslint-plugin-nx": "10.3.1",
